# mr-ninja

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: website_guide.md
public/: 404.html  docs.html  index.html
src/mr_ninja/: __init__.py  cli.py  server.py
src/mr_ninja/agents/: chunk_planner.py  orchestrator.py
src/mr_ninja/core/: models.py
src/mr_ninja/github/: __init__.py  github_client.py
tests/: test_cli.py  test_demo.py  test_github_client.py  test_gitlab_client.py  test_models.py  test_platform_detection.py  test_server.py
