[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-ninja"
version = "1.0.0"
description = "Large Context Orchestrator for GitLab Duo -- chunk oversized MRs and run multi-agent security analysis."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Mr Ninja Team"},
]
keywords = [
    "gitlab", "duo", "merge-request", "code-review",
    "security", "chunking", "llm", "devsecops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://namdpran8.github.io/mr-ninja/"
Documentation = "https://your-group.gitlab.io/mr-ninja/"
Repository = "https://github.com/namdpran8/mr-ninja"
Issues = "https://github.com/namdpran8/mr-ninja/issues"


[project.scripts]
mr-ninja = "mr_ninja.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mr_ninja = ["flows/*.yaml"]

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# --------------------------------------------------------------------------
# mypy
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# --------------------------------------------------------------------------
# ruff (replaces flake8 + isort)
# --------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# --------------------------------------------------------------------------
# coverage
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/mr_ninja"]
omit = ["tests/*", "src/mr_ninja/demo/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
